BUG 7685: Make DataSlate panes align at the top The clearfix on siteHeader was pushing down the edit wrapper (even though there is an overflow:auto between them). Changing the div to float:left made it ignore the clearfix (because, duh).
QA: Make sure bug is fixed

--- a/app/styles/configurator.sass
+++ b/app/styles/configurator.sass
@@ -60,6 +60,7 @@
     background-color: $color_chrome_box_border
 .cfViewTypeWrapper
   display: inline-block
+  float: left
   height: 100%
   width: 100%
 .cfPreviewWrapper .cfViewInnerWrapper
